# GNSSTimeServer

./: LICENSE  Notes.txt  README.md  SECURITY.md  platformio.ini
.github/: FUNDING.yml
.github/workflows/: build-ntp-rdate.yml  build-ptp-master.yml  build-ptp-slave.yml  codeql.yml  main.yml  release.yml
include/: definitions.h
resources/: ATTRIBUTION  painel_frontal-v4-perfurado.SLDPRT  painel_frontal-v4-perfurado.STL  painel_frontal-v4.DXF  painel_frontal_dimensoes.SLDPRT  power supply.fzz  sketch-ESP32_With_ETH-20250308.fzz  sketch-ESP32_Without_ETH-20250308.fzz  sketch.fzz  w5500_module-Changed_By_cristianomonteiro@gmail.com.fzpz
resources/3DPrintableCase/: Case_Ver2-BPanel.stl  Case_Ver2-Bottom.stl  Case_Ver2-FPanel.stl  Case_Ver2-Top_Github-QR_Code.stl  Case_Ver2.scad  qr-code6.dxf
resources/Gerbers/: BottomCopper.gbr  BottomMask.gbr  Bottom_Cu.gbr  Bottom_Mask.gbr  Drill.drl  EdgeCuts.gbr  Edge_Cuts.gbr  TopCopper.gbr  TopMask.gbr  TopSilkscreen.gbr  Top_Cu.gbr  Top_Mask.gbr  Top_Silkscreen.gbr
src/: index.html  index_bytearray.h  main.cpp  ota.h  platformio.ini
src/NTP_RDATE/: indextprocessor.py
src/PTP/: README.md
src/PTP/Master/: CMakeLists.txt  sdkconfig.defaults
src/PTP/Master/main/: CMakeLists.txt  allystar_timing.c  allystar_timing.h  build_ota_page.py  index.html  main.c  ota.html  ota_credentials.h  ota_handler.h  ota_page.h  status_page.h  web_server.h
src/PTP/Slave/: CMakeLists.txt  partitions_ota.csv  sdkconfig.defaults
src/PTP/Slave/main/: CMakeLists.txt  build_ota_page.py  index.html  (+7 more)
src/PTP/resources/: Case_PTP-FINAL.scad
(+106 files in other folders)
